clusters/homelab/apps/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "miniox.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: minio-https
  hostnames:
  - "miniox.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio
      port: 9001
